Add maven-javadoc-plugin configuration for Java 21